# dbt_localbikes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
data_tests/sources/: assert_sales_customers_uq_name.sql
dbt/: dbt_project.yml  profiles.yml
dbt/data_tests/sources/: assert_sales_customers_uq_name.sql
dbt/macros/: generate_schema_name.sql
dbt/models/: dashboards.yml  overview.md  src_production.yml  src_sales.yml
dbt/models/dtm/: dim_customer.sql  dim_produit.sql  dim_staff.sql  dim_store.sql  order_items.sql  orders.sql  store_stocks.sql
dbt/models/stg/production/: stg_brands.sql  stg_categories.sql  stg_products.sql  stg_stocks.sql
dbt/models/stg/sales/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_staffs.sql  stg_stores.sql
dbt/seeds/: load_raw_data.sql
macros/: generate_schema_name.sql
models/: overview.md  src_production.yml
models/dtm/: dim_staff.sql  order_items.sql
models/stg/production/: stg_brands.sql  stg_products.sql  stg_stocks.sql
models/stg/sales/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_stores.sql
reports/: report_LocalBikes.pbit  report_LocalBikes.pbix
