[project]
name = "dbt-localbikes"
version = "0.1.0"
description = "Industrialisation données localbiles 🚴 avec dbt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
]

[dependency-groups]
dev = [
    # "pre-commit>=4.5.0",
    # "pre-commit-uv>=4.2.0",
    # préférer install globale ?? -> `uv tool install pre-commit --with pre-commit-uv`
    "ruff>=0.14.8",
    "shandy-sqlfmt[jinjafmt]>=0.28.2",
    "dbt-colibri>=0.2.7",
]

[tool.sqlfmt]
exclude=["dbt/target/**/*", "dbt/dbt_packages/**/*", 'dbt/seeds/load_raw_data.sql']
